Agregamos el carrusel

--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -42,7 +42,46 @@
     <header>
         <img src="../img/banner.jpg" alt="banner LTH records" width="200" height="150">
     </header>
-    <main><h1> Proximamente.  </h1> </main>
+    <main><h1> Proximamente...  </h1>
+      <H2>
+      <div class="carousel-container mx-auto text-center">
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../img/carousel1.png" class="d-center w-50" alt="evento LTH">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/carousel2.png" class="d-center w-50" alt="evento LTH">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/carousel3.png" class="d-center w-50" alt="evento LTH">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/carousel4.png" class="d-center w-50" alt="evento LTH">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/carousel5.png" class="d-center w-50" alt="evento LTH">
+            </div>
+          </div>
+          <button class="carousel-control-prev btn btn-dark" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next btn btn-dark" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      </H2>
+    </main>
     <footer>
         <div>
             <a href="https://es-la.facebook.com/" target="_blank" >
