--- a/pages/releases.html
+++ b/pages/releases.html
@@ -7,7 +7,7 @@
     <title>Last Train of House records</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <div class="box-top">
@@ -98,17 +98,19 @@
         </section>
         <section class="track1 bg-grey">
             <img src="../img/track1.jpg" alt="Track Piv">
-            <p>Con el support de grandes artistas</p>
+            <p>Con el support de grandes artistas - Chriss Stussy presenta The Piv Limited 002</p>
         </section>
         <section class="track2 bg-grey">
             <img src="../img/track2.jpg" alt="track piv">
-            <p>Primer single del año</p>
+            <p>Primer single del año "Across the ocean" - Chris Stussy</p>
         </section>
         <section class="track3 bg-grey">
-            <img src="../img/track3.jpg" alt="best track ">
+            <img src="../img/track3.jpg" alt="best track">
+            <p> Chris Stussy Presents "Creativity EP"</p>
         </section>
         <section class="track4 bg-grey">
             <img src="../img/track4.jpg" alt="djoko colab">
+            <p>Nos damos el lujo de tener a DJOKO en un collab</p>
         </section>
     </main>
     <footer>
