--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,7 +7,7 @@
     <title>Last Train of House records</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <div class="box-top">
@@ -42,16 +42,34 @@
     <header>
         <img src="../img/banner.jpg" alt="banner LTH records" width="200" height="150">
     </header>
-    <main>
-        <section class>
-            <h1>Quienes somos</h1>
-            <p>Sumérgete en un mundo de beats elegantes, grooves sutiles y melodías hipnóticas. Last Train of House Records te invita a explorar la esencia del minimal house, al estilo de Chris Stussy y otros artistas destacados. Desde los rincones más profundos del underground hasta los escenarios más exclusivos, nuestro sello discográfico trae a tus oídos el sonido distintivo del minimalismo en la música House. Nuestros artistas son maestros en crear atmósferas cautivadoras, donde cada nota y cada ritmo se entrelazan en una experiencia sonora única. Déjate llevar por los ritmos envolventes, los bajos precisos y las texturas sutiles que caracterizan el minimal house. En Last Train of House Records, cada lanzamiento es una invitación a sumergirse en un viaje introspectivo y enérgico, donde la música se convierte en el lenguaje universal que conecta a las almas en la pista de baile.</p>
-        </section>
-        <section>
-            <h2>Rodrigo Palermo</h2>
-            <p>Rodri Palermo, DJ y productor de Rosario, fusiona grooves profundos y melodías hipnóticas en su característico estilo minimal. Su música te transportará a un mundo sonoro envolvente y te invitará a bailar sin parar. Prepárate para experimentar el poder del minimal house y el minimal tech con Rodri Palermo</p>
-        </section>
-    </main>
+    <main class="about">
+      <section class="about__box">
+          <img src="../img/artist.png" alt="" class="Rodri palermo y chris Stussy">
+          <div>
+              <h1 class="about__header--left">Quienes somos</h1>
+              <p class="about__text--md">Sumérgete en un mundo de beats elegantes, grooves sutiles y melodías hipnóticas. Last Train of House Records te invita a explorar la esencia del minimal house, al estilo de Chris Stussy y otros artistas destacados.<span> Desde los rincones más profundos del underground hasta los escenarios más exclusivos, nuestro sello discográfico trae a tus oídos el sonido distintivo del minimalismo en la música House.</span>Nuestros artistas son maestros en crear atmósferas cautivadoras, donde cada nota y cada ritmo se entrelazan en una experiencia sonora única.<br>
+              Déjate llevar por los ritmos envolventes, los bajos precisos y las texturas sutiles que caracterizan el minimal house. En Last Train of House Records, cada lanzamiento es una invitación a sumergirse en un viaje introspectivo y enérgico, donde la música se convierte en el lenguaje universal que conecta a las almas en la pista de baile.
+              </p>
+              <ul class="about__list--gris">
+                  <li>Sonidos minimalistas</li>
+                  <li class="yo-no">Melodias old school</li>
+                  <li>Bajos envolventes</li>
+                  <li>Percusiones innovadoras</li>
+              </ul>
+              <a href="#" class="about__link--left">Escucha nuestra musica</a>
+          </div>
+      </section>
+      <section class="about__box--reverse">
+          <img src="../img/productos/Max_Citrus.jpg" alt="" class="about__img--md">
+          <div>
+              <h2 class="about__header--left">Support</h2>
+              <p class="about__text--md one">Contamos con el support de grandes artias como Sidney Charles, Djoko Kologne, Archie Hamilton, Prunk, Project89, Kreech, ArtmanN, Mateo Dufour y muchos más<br>
+              Que estas esperando para enviarnos tu demo? No esperes mas y sumate a la lista de artistas que suenan en nuestros portales a diario!. 
+              </p>
+              <a href="#" class="about__link--left">Más info +</a>
+          </div>
+      </section>
+  </main>
     <footer>
         <div>
             <a href="https://es-la.facebook.com/" target="_blank" >
