--- a/pages/releases.html
+++ b/pages/releases.html
@@ -109,8 +109,8 @@
             <p> Chris Stussy Presents "Creativity EP"</p>
         </section>
         <section class="track4 bg-grey">
-            <img src="../img/track4.jpg" alt="djoko colab">
-            <p>Nos damos el lujo de tener a DJOKO en un collab</p>
+            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1321718386%3Fsecret_token%3Ds-8iLucuKUiTl&color=%23323034&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/rodri-palermo-414020712" title="Rodri Palermo DJ" target="_blank" style="color: #cccccc; text-decoration: none;">Rodri Palermo DJ</a> · <a href="https://soundcloud.com/rodri-palermo-414020712/peace-reputation-palermo-original-mix2" title="Peace &amp; Reputation Palermo Original Mix2" target="_blank" style="color: #cccccc; text-decoration: none;">Peace &amp; Reputation Palermo Original Mix2</a></div>
+            <p>Nos damos el lujo de tener el ultimo track de Rodri Palermo</p>
         </section>
     </main>
     <footer>
