--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -42,8 +42,9 @@
     <header>
         <img src="../img/banner.jpg" alt="banner LTH records" width="200" height="150">
     </header>
-    <main><h1> Proximamente...  </h1>
-      <H2>
+    <main>
+      <h1 class="text-center"> Algunos eventos destacados  </h1>
+      <h2>
       <div class="carousel-container mx-auto text-center">
         <div id="carouselExampleIndicators" class="carousel slide">
           <div class="carousel-indicators">
@@ -80,7 +81,15 @@
           </button>
         </div>
       </div>
-      </H2>
+      </h2>
+      <h3 class="presentacion">
+        <div class="card" style="width: 18rem;">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/WTSZ55u04dQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <div class="card-body">
+            <p class="card-text">Sunset en Parador Santa fe. Rodri palermo con su estilo minimal house alegrando la tarde.</p>
+          </div>
+        </div>
+      </h3>
     </main>
     <footer>
         <div>
