--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,33 +41,40 @@
     </nav>
     <main>
         <section class="contenedor">
-            <h1>CONTACTO</h1>
-          <form action="envio.php">
-            <div>
-             <label for="nombre:">Nombre:</label>
-             <input type="text" id="nombre">
-            </div>
-            <div>
-             <label for="tel">Tel:</label>
-             <input type="tel" id="tel">
-            </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email
-                " id="email">
-            </div>
-            <div>
-                <label for="mensaje">Deje su mensaje</label>
-                <br>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-            </div>
-            <div>
-                <input type="submit" value="Enviar">
-                <input type="reset" value="Cancelar">
+          <form class="container mt-5">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="card shadow">
+                  <div class="card-body">
+                    <h2 class="card-title mb-4">Dejanos el link de tu demo de soundcloud</h2>
+                    <form action="#" method="post">
+                      <div class="form-group">
+                        <label for="nombre">Nombre:</label>
+                        <input type="text" class="form-control" id="nombre" name="nombre" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="email">Correo electrónico:</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="asunto">Asunto:</label>
+                        <input type="text" class="form-control" id="asunto" name="asunto" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="mensaje">Mensaje:</label>
+                        <textarea class="form-control" id="mensaje" name="mensaje" rows="5" required></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary btn-block">Enviar</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.7860665469766!2d-60.661254799999966!3d-32.956657199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab6f11537faf%3A0xa99bea6006b75b6a!2sEstadio%20Coloso%20Del%20Parque%20Marcelo%20Bielsa!5e0!3m2!1ses-419!2sar!4v1685412241825!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
             </div>
           </form>
         </section>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.7860665469766!2d-60.661254799999966!3d-32.956657199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab6f11537faf%3A0xa99bea6006b75b6a!2sEstadio%20Coloso%20Del%20Parque%20Marcelo%20Bielsa!5e0!3m2!1ses-419!2sar!4v1685412241825!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <div>
