--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -85,19 +85,19 @@
       <h3 class="text-center">
        <section class="presentacion">
          <figure class="card custom-card" style="width: 18rem;">
-           <img src="/img/santafe.png" alt="Evento isla de santa fe Rodri palermo">
+           <img src="../img/santafe.png" alt="Evento isla de santa fe Rodri palermo">
            <div class="card-body">
            <p class="card-text">Sunset en Parador Santa fe. Rodri palermo con su estilo minimal house alegrando la tarde.</p>
            <a href="https://youtu.be/WTSZ55u04dQ" target="_blank" class="btn btn-primary">Escucha el set</a>
          </figure>
          <figure class="card custom-card" style="width: 18rem;">
-            <img src="/img/rizosbrothers.png" alt="Evento isla de santa fe B2B">
+            <img src="../img/rizosbrothers.png" alt="Evento isla de santa fe B2B">
             <div class="card-body">
             <p class="card-text">El B2B que hizo bailar a todos Martin Fredes y Rodri palermo</p>
             <a href="https://youtu.be/-P7GVgQ9uG0" target="_blank" class="btn btn-primary">Escucha el set</a>
          </figure>
          <figure class="card custom-card" style="width: 18rem;">
-          <img src="/img/awake.png" alt="Awakenings 2022">
+          <img src="../img/awake.png" alt="Awakenings 2022">
           <div class="card-body">
           <p class="card-text">Nuestro embajador Chris Stussy en el festival Awakenings 2022</p>
           <a href="https://youtu.be/n-pgF-iip8g" target="_blank" class="btn btn-primary">Escucha el set</a>
