--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -40,7 +40,9 @@
         </div>
     </nav>
     <header>
-        <img src="../img/banner.jpg" alt="banner LTH records" width="200" height="150">
+        <img src="../img/banner.jpg" alt="banner LTH records" width="100%" class="header-image">
+        <div class="header-overlay d-flex align-items-center justify-content-center active">
+          <h1 class="header-text">Bienvenidos a Last Train Of house</h1>
     </header>
     <main>
       <h1 class="text-center"> Algunos eventos destacados  </h1>
@@ -98,6 +100,7 @@
          </figure>
          <figure class="card custom-card" style="width: 18rem;">
           <img src="../img/awake.png" alt="Awakenings 2022">
+
           <div class="card-body">
           <p class="card-text">Nuestro embajador Chris Stussy en el festival Awakenings 2022</p>
           <a href="https://youtu.be/n-pgF-iip8g" target="_blank" class="btn btn-primary">Escucha el set</a>
