--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -40,7 +40,9 @@
         </div>
     </nav>
     <header>
-        <img src="../img/banner.jpg" alt="banner LTH records" width="200" height="150">
+        <img src="../img/banner.jpg" alt="banner LTH records" width="100%" class="header-image">
+        <div class="header-overlay d-flex align-items-center justify-content-center active">
+          <h1 class="header-text">Bienvenidos a Last Train Of house</h1>
     </header>
     <main class="about">
       <section class="about__box">
