--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header>
         <img src="img/banner.jpg" alt="banner LTH records" width="100%" class="header-image">
         <div class="header-overlay d-flex align-items-center justify-content-center active">
-          <h1 class="header-text">Bienvenidos a Last Train Of house</h1>
+          <p class="header-text active" onclick="activarAnimacion()">The Last Train Of House</p>
     </header>
     <main>
         <h1 class="text-center">Bienvenidos a Last Train of House Records</h1>
