--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Last Train of House records</title>
+    <title>Last Train of House records - Sello discográfico</title>
+    <meta name="description" content="Sello discográfico de musica House UnderGround">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
@@ -16,7 +17,7 @@
     <nav class="navbar navbar-expand-lg " >
         <div class="container-fluid">
             <a href="index.html">
-              <img src="img/Last.png" alt="Logo LTH records">
+              <img src="img/Last.png" alt="Logo Last Train of House records">
              </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,7 +41,7 @@
         </div>
     </nav> 
     <header>
-        <img src="img/banner.jpg" alt="banner LTH records" width="100%" class="header-image">
+        <img src="img/banner.jpg" alt="Mesa de CDJ Pioneer con el DJ" width="100%" class="header-image">
         <div class="header-overlay d-flex align-items-center justify-content-center active">
           <p class="header-text active" onclick="activarAnimacion()">The Last Train Of House</p>
     </header>
@@ -48,37 +49,37 @@
         <h1 class="text-center">Bienvenidos a Last Train of House Records</h1>
         <section class="presentacion">
             <figure>
-                <img src="./img/Last.png" alt=Bienvenida>
+                <img src="./img/Last.png" alt="Logo del sello discográfico">
                 <figcaption>Descubre la Esencia del Minimal House</figcaption>
                 <p>Sumérgete en un mundo de beats elegantes, grooves sutiles y melodías hipnóticas. Last Train of House Records te invita a explorar la esencia del minimal house, al estilo de Chris Stussy y otros artistas destacados.</p>
                 <button>Escucha nuestros tracks</button>
             </figure>
             <figure>
-                <img src="./img/under.png" alt="Musica underground">
+                <img src="./img/under.png" alt="Musica underground flyer">
                 <figcaption>UnderGround Groove</figcaption>
                 <p>Desde los rincones más profundos del underground hasta los escenarios más exclusivos.</p>
                 <button class="button">+ Escucha nuestros tracks</button>
             </figure>
             <figure>
-                <img src="./img/chicago.jpg" alt="Chicago House">
+                <img src="./img/chicago.jpg" alt="Discoteca de chicago donde iniciaron las rave de musica House">
                 <figcaption>Un viaje al house de chicago</figcaption>
                 <p>Déjate llevar por los ritmos envolventes, los bajos precisos y las texturas sutiles que caracterizan el minimal.</p>
                 <button>+Nuestros tracks</button>
             </figure>
             <figure>
-                <img src="./img/artist.png" alt="DJs Producers">
+                <img src="./img/artist.png" alt="Rodri Palermo y Chriss Stussy nuestros DJs Producers">
                 <figcaption>Conoce nuestros artistas</figcaption>
                 <p></p>
                 <button>+Charts</button>
             </figure>
             <figure>
-                <img src="./img/chriss.jpg" alt="Chris Stussy">
+                <img src="./img/chriss.jpg" alt="Chris Stussy tocando en space miami">
                 <figcaption>Chris Stussy</figcaption>
                 <p>"Descubre a Chris, un DJ y productor reconocido en la escena de la música electrónica por su estilo único de minimal house."</p>
                 <button>+Su musica</button>
             </figure>
             <figure>
-                <img src="./img/yo.png" alt="Rodri Palermo">
+                <img src="./img/yo.png" alt="Rodri Palermo en la portada de su ultimo EP">
                 <figcaption>Rodri Palermo</figcaption>
                 <p>Rodri Palermo, DJ y productor de Rosario, fusiona grooves profundos y melodías hipnóticas en su característico estilo minimal.</p>
                 <button>+Su musica</button>
