--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Last Train of House records</title>
+    <title>Last Train of House records - Nuestros Eventos</title>
+    <meta name="description" content="Los eventos de nuestro sello tienen su impronta muy caracteristica, obtén un vistazo de ellos">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -12,7 +13,7 @@
 <body>
     <div class="box-top">
         <p> DEJANOS TU DEMO 💖😉✌</p>
-     </div>
+    </div>
     <nav class="navbar navbar-expand-lg" >
         <div class="container-fluid">
             <a href="../index.html">
@@ -40,7 +41,7 @@
         </div>
     </nav>
     <header>
-        <img src="../img/banner.jpg" alt="banner LTH records" width="100%" class="header-image">
+        <img src="../img/banner.jpg" alt="Mesa de CDJ Pioneer con el DJ" width="100%" class="header-image">
         <div class="header-overlay d-flex align-items-center justify-content-center active">
           <p class="header-text" onclick="activarAnimacion()">The Last Train Of House</p>
     </header>
@@ -58,19 +59,19 @@
            </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/carousel1.png" class="d-center w-50" alt="evento LTH">
+              <img src="../img/carousel1.png" class="d-center w-50" alt="Evento de Rodri Palermo ciudad de rosario">
             </div>
             <div class="carousel-item">
-              <img src="../img/carousel2.png" class="d-center w-50" alt="evento LTH">
+              <img src="../img/carousel2.png" class="d-center w-50" alt="Evento de Rodri Palermo After de POPOF">
             </div>
             <div class="carousel-item">
-              <img src="../img/carousel3.png" class="d-center w-50" alt="evento LTH">
+              <img src="../img/carousel3.png" class="d-center w-50" alt="Evento de Rodri Palermo en Wav producciones">
             </div>
             <div class="carousel-item">
-              <img src="../img/carousel4.png" class="d-center w-50" alt="evento LTH">
+              <img src="../img/carousel4.png" class="d-center w-50" alt="Evento de Rodri Palermo para Animals electronic music">
             </div>
             <div class="carousel-item">
-              <img src="../img/carousel5.png" class="d-center w-50" alt="evento LTH">
+              <img src="../img/carousel5.png" class="d-center w-50" alt="Evento de Rodri Palermo para 127 BPM">
             </div>
           </div>
            <button class="carousel-control-prev btn btn-dark" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -93,13 +94,13 @@
            <a href="https://youtu.be/WTSZ55u04dQ" target="_blank" class="btn btn-primary">Escucha el set</a>
          </figure>
          <figure class="card custom-card" style="width: 18rem;">
-            <img src="../img/rizosbrothers.png" alt="Evento isla de santa fe B2B">
+            <img src="../img/rizosbrothers.png" alt="Evento isla de santa fe B2B con Martin Fredes">
             <div class="card-body">
             <p class="card-text">El B2B que hizo bailar a todos Martin Fredes y Rodri palermo</p>
             <a href="https://youtu.be/-P7GVgQ9uG0" target="_blank" class="btn btn-primary">Escucha el set</a>
          </figure>
          <figure class="card custom-card" style="width: 18rem;">
-          <img src="../img/awake.png" alt="Awakenings 2022">
+          <img src="../img/awake.png" alt="Awakenings 2022 festival donde Toco Chris Stussy">
 
           <div class="card-body">
           <p class="card-text">Nuestro embajador Chris Stussy en el festival Awakenings 2022</p>
