--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Last Train of House records</title>
+    <title>Last Train of House records - Sobre Nosotros</title>
+    <meta name="description" content="Un poco de informacion sobre nuestro punto de vista en la musica electrónica">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -12,7 +13,7 @@
 <body>
     <div class="box-top">
         <p> DEJANOS TU DEMO  💖😉✌</p>
-     </div>
+    </div>
     <nav class="navbar navbar-expand-lg" >
         <div class="container-fluid">
             <a href="../index.html">
@@ -40,13 +41,13 @@
         </div>
     </nav>
     <header>
-        <img src="../img/banner.jpg" alt="banner LTH records" width="100%" class="header-image">
+        <img src="../img/banner.jpg" alt="Mesa de CDJ Pioneer con el DJ" width="100%" class="header-image">
         <div class="header-overlay d-flex align-items-center justify-content-center active">
           <p class="header-text" onclick="activarAnimacion()">The Last Train Of House</p>
     </header>
     <main class="about">
       <section class="about__box">
-          <img src="../img/Last.png" alt="" class="Rodri palermo y chris Stussy">
+          <img src="../img/Last.png" alt="" class="Rodri palermo y chris Stussy los creadores del sello">
           <div>
               <h1 class="about__header--left">Quienes somos</h1>
               <p class="about__text--md">Sumérgete en un mundo de beats elegantes, grooves sutiles y melodías hipnóticas. Last Train of House Records te invita a explorar la esencia del minimal house, al estilo de Chris Stussy y otros artistas destacados.<span> Desde los rincones más profundos del underground hasta los escenarios más exclusivos, nuestro sello discográfico trae a tus oídos el sonido distintivo del minimalismo en la música House.</span>Nuestros artistas son maestros en crear atmósferas cautivadoras, donde cada nota y cada ritmo se entrelazan en una experiencia sonora única.<br>
@@ -62,7 +63,7 @@
           </div>
       </section>
       <section class="about__box--reverse">
-          <img src="../img/artist.png" alt="" class="about__img--md">
+          <img src="../img/artist.png" alt="Rodri Palermo y Chris Stussy posando artisticamente" class="about__img--md">
           <div>
               <h2 class="about__header--left">Support</h2>
               <p class="about__text--md one">Contamos con el support de grandes artias como Sidney Charles, Djoko Kologne, Archie Hamilton, Prunk, Project89, Kreech, ArtmanN, Mateo Dufour y muchos más<br>
