--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Last Train of House records</title>
+    <title>Last Train of House records - Contacto</title>
+    <meta name="description" content="Contactate con nosotros para sellar tus tracks con nosotros y consigue el support de grandes artistas">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -12,7 +13,7 @@
 <body>
     <div class="box-top">
         <p> DEJANOS TU DEMO 💖😉✌</p>
-     </div>
+    </div>
     <nav class="navbar navbar-expand-lg" >
         <div class="container-fluid">
             <a href="../index.html">
