--- a/pages/releases.html
+++ b/pages/releases.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Last Train of House records</title>
+    <title>Last Train of House records - Releases</title>
+    <meta name="description" content="Los ultimos releases del sello, la vanguardia de la musica para cualquier DJ">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
@@ -12,7 +13,7 @@
 <body>
     <div class="box-top ">
         <p> DEJANOS TU DEMO  💖😉✌</p>
-     </div>
+    </div>
     <nav class="navbar navbar-expand-lg" >
         <div class="container-fluid">
             <a href="../index.html">
@@ -40,7 +41,7 @@
         </div>
     </nav>
     <header>
-        <img src="../img/banner.jpg" alt="banner LTH records" width="100%" class="header-image">
+        <img src="../img/banner.jpg" alt="Mesa de CDJ Pioneer con el DJ" width="100%" class="header-image">
         <div class="header-overlay d-flex align-items-center justify-content-center active">
             <p class="header-text" onclick="activarAnimacion()">The Last Train Of House</p>
     </header>
@@ -104,15 +105,15 @@
             <p>Nos damos el lujo de tener el ultimo track de Rodri Palermo "Peace & Reputation"</p>
         </section>
         <section class="conteiner tienda track2 bg-grey">
-            <img src="../img/track2.jpg" alt="track piv">
+            <img src="../img/track2.jpg" alt="Portada de Across the ocean Chris Stussy">
             <p>Primer single del año "Across the ocean" - Chris Stussy</p>
         </section>
         <section class="conteiner tienda track3 bg-grey">
-            <img src="../img/track3.jpg" alt="best track">
+            <img src="../img/track3.jpg" alt="Portada del EP Creativity">
             <p> Chris Stussy Presents "Creativity EP"</p>
         </section>
         <section class="conteiner tienda track4 bg-grey">
-            <img src="../img/track1.jpg" alt="Track Piv">
+            <img src="../img/track1.jpg" alt="Portada de THE PIV LIMITED EP aniversario">
             <p>Con el support de grandes artistas - Chriss Stussy presenta The Piv Limited 002</p>
         </section>
     </main>
