--- a/pages/error404.html
+++ b/pages/error404.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Last Train of House records - Nuestros Eventos</title>
+    <meta name="description" content="Los eventos de nuestro sello tienen su impronta muy caracteristica, obtén un vistazo de ellos">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <div class="box-top">
@@ -34,6 +39,10 @@
             </ul>
           </div>
         </div>
-    </nav>   
+    </nav>
+    <a href="/index.html">
+        <p>Regresa a la pagina, todo va a estar bien</p>
+    <img src="../img/error404.webp" alt="ERROR 404">
+    </a>   
 </body>
 </html>
