--- a/index.html
+++ b/index.html
@@ -52,31 +52,31 @@
                 <img src="./img/Last.png" alt="Logo del sello discográfico">
                 <figcaption>Descubre la Esencia del Minimal House</figcaption>
                 <p>Sumérgete en un mundo de beats elegantes, grooves sutiles y melodías hipnóticas. Last Train of House Records te invita a explorar la esencia del minimal house, al estilo de Chris Stussy y otros artistas destacados.</p>
-                <a href="/pages/error404.html"><button>Escucha nuestros tracks</button></a>
+                <a href="./pages/error404.html"><button>Escucha nuestros tracks</button></a>
             </figure>
             <figure>
                 <img src="./img/under.png" alt="Musica underground flyer">
                 <figcaption>UnderGround Groove</figcaption>
                 <p>Desde los rincones más profundos del underground hasta los escenarios más exclusivos.</p>
-                <a href="/pages/error404.html"><button class="button">+ Escucha nuestros tracks</button></a>
+                <a href="./pages/error404.html"><button class="button">+ Escucha nuestros tracks</button></a>
             </figure>
             <figure>
                 <img src="./img/chicago.jpg" alt="Discoteca de chicago donde iniciaron las rave de musica House">
                 <figcaption>Un viaje al house de chicago</figcaption>
                 <p>Déjate llevar por los ritmos envolventes, los bajos precisos y las texturas sutiles que caracterizan el minimal.</p>
-                <a href="/pages/error404.html"><button>+Nuestros tracks</button></a>
+                <a href="./pages/error404.html"><button>+Nuestros tracks</button></a>
             </figure>
             <figure>
                 <img src="./img/artist.png" alt="Rodri Palermo y Chriss Stussy nuestros DJs Producers">
                 <figcaption>Conoce nuestros artistas</figcaption>
                 <p></p>
-                <a href="/pages/error404.html"><button>+Charts</button></a>
+                <a href="./pages/error404.html"><button>+Charts</button></a>
             </figure>
             <figure>
                 <img src="./img/chriss.jpg" alt="Chris Stussy tocando en space miami">
                 <figcaption>Chris Stussy</figcaption>
                 <p>"Descubre a Chris, un DJ y productor reconocido en la escena de la música electrónica por su estilo único de minimal house."</p>
-                <a href="/pages/error404.html">
+                <a href="./pages/error404.html">
                   <button>+Su musica</button>
                 </a>
             </figure>
@@ -84,7 +84,7 @@
                 <img src="./img/yo.png" alt="Rodri Palermo en la portada de su ultimo EP">
                 <figcaption>Rodri Palermo</figcaption>
                 <p>Rodri Palermo, DJ y productor de Rosario, fusiona grooves profundos y melodías hipnóticas en su característico estilo minimal.</p>
-                <a href="/pages/error404.html">
+                <a href="./pages/error404.html">
                   <button>+Su musica</button>
                 </a>
             </figure>
