--- a/pages/error404.html
+++ b/pages/error404.html
@@ -40,7 +40,7 @@
           </div>
         </div>
     </nav>
-    <a href="/index.html">
+    <a href="../index.html">
         <p>Regresa a la pagina, todo va a estar bien</p>
     <img src="../img/error404.webp" alt="ERROR 404">
     </a>   
