--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -44,6 +44,7 @@
         <img src="../img/banner.jpg" alt="Mesa de CDJ Pioneer con el DJ" width="100%" class="header-image">
         <div class="header-overlay d-flex align-items-center justify-content-center active">
           <p class="header-text" onclick="activarAnimacion()">The Last Train Of House</p>
+          </div>
     </header>
     <main>
       <h1 class="text-center"> Algunos eventos destacados  </h1>
