--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -43,7 +43,7 @@
     <header>
         <img src="../img/banner.jpg" alt="Mesa de CDJ Pioneer con el DJ" width="100%" class="header-image">
         <div class="header-overlay d-flex align-items-center justify-content-center active">
-          <p class="header-text" onclick="activarAnimacion()">The Last Train Of House</p>
+          <p class="header-text" onclick="activarAnimacion()">The Last Train Of House</p></div>
     </header>
     <main class="about">
       <section class="about__box">
