--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,7 +70,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 mapita">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.7860665469766!2d-60.661254799999966!3d-32.956657199999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab6f11537faf%3A0xa99bea6006b75b6a!2sEstadio%20Coloso%20Del%20Parque%20Marcelo%20Bielsa!5e0!3m2!1ses-419!2sar!4v1685412241825!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
