--- a/pages/error404.html
+++ b/pages/error404.html
@@ -40,9 +40,13 @@
           </div>
         </div>
     </nav>
-    <a href="../index.html">
+    <main>
+     <a href="../index.html">
+       <button class="botonerror">
         <p>Regresa a la pagina, todo va a estar bien</p>
-    <img src="../img/error404.webp" alt="ERROR 404">
-    </a>   
+       </button>
+        <img class="error" src="../img/error404.webp" alt="ERROR 404">
+     </a>
+  </main>   
 </body>
 </html>
